kubernetes/traefik/addl/expose_ui/ingress.yml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-dashboard
  namespace: my-traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000

---
kind: Middleware
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: traefik-dashboard-auth
  namespace: my-traefik
spec:
  basicAuth:
    secret: traefik-dashboard-secret

---
kind: Middleware
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: traefik-dashboard-rewrite
  namespace: my-traefik
spec:
  addPrefix:
    prefix: /dashboard

---
kind: Middleware
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: redirect-https
  namespace: my-traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: traefik-dashboard-ingress
  namespace: my-traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.middlewares: my-traefik-traefik-dashboard-auth@kubernetescrd,traefik-system-traefik-dashboard-rewrite@kubernetescrd
    # cert-manager.io/cluster-issuer: selfsigned
spec:
  rules:
  - host: t.local.127.0.0.1.sslip.io
    http:
      paths:
      - backend:
          service:
            name: traefik-dashboard
            port:
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - t.local.127.0.0.1.sslip.io
    secretName: traefik-san-local-cert
