kubernetes/traefik/addl/expose_ui/ingressroute.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: my-traefik

---
kind: Middleware
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: traefik-dashboard-auth
  namespace: my-traefik
spec:
  basicAuth:
    secret: traefik-dashboard-secret

---
kind: Middleware
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: traefik-dashboard-rewrite
  namespace: my-traefik
spec:
  addPrefix:
    prefix: /dashboard

---
kind: Middleware
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: redirect-https
  namespace: my-traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: traefik-dashboard-secure
  namespace: my-traefik
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - match: Host(`traefik.local.127.0.0.1.sslip.io`)
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
    - name: traefik-dashboard-auth
    - name: traefik-dashboard-rewrite
    - name: redirect-https
  - match: Host("traefik.local.127.0.0.1.sslip.io") && PathPrefix("/api")
    kind: Rule
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
    - name: traefik-dashboard-auth
    - name: redirect-https
  tls:
    secretName: traefik-san-local-cert
